Comment feature add